<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="191dp">

        <LinearLayout
            android:id="@+id/layoutMailBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:clickable="true">

            <TextView
                android:id="@+id/tvMailbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/labelmailbox"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:clickable="false"
                android:duplicateParentState="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvConnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="@string/connected" />

                <TextView
                    android:id="@+id/tvConnectedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="0" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#DBDBDB"
                    android:clickable="false"
                    android:duplicateParentState="true" />

                <TextView
                    android:id="@+id/tcSent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="@string/sent" />

                <TextView
                    android:id="@+id/tcSentValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="0" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#DBDBDB"
                    android:clickable="false"
                    android:duplicateParentState="true" />

                <TextView
                    android:id="@+id/tvReceived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="@string/received" />

                <TextView
                    android:id="@+id/tvReceivedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:text="0" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/basiclabel"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="#DBDBDB" />

            <RelativeLayout
                android:id="@+id/layoutDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/ivDomain"
                    android:hint="@string/labeldomain">

                    <EditText
                        android:id="@+id/etDomain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textUri"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivDomain"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/presence_busy" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layoutPort"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelport"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/ivPort">

                    <EditText
                        android:id="@+id/etPort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:inputType="number"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivPort"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/presence_busy" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/swSSL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/portSSLlabel"
                    android:textSize="18sp" />
            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="#DBDBDB" />

            <LinearLayout
                android:id="@+id/layoutPortCert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_path_negative"
                android:clickable="false"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tvCert"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/labelcert" />

                <ImageButton
                    android:id="@+id/ibOpenDialog"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_main_theme"
                    android:clickable="false"
                    android:duplicateParentState="true"
                    app:srcCompat="@android:drawable/sym_contact_card" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/labelpassword">

                <EditText
                    android:id="@+id/etPassCert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/layoutPortSsl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/labelport_ssl"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/ivPortSSL">

                    <EditText
                        android:id="@+id/etPortSsl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:ems="10"
                        android:enabled="false"
                        android:inputType="number"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivPortSSL"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/presence_busy" />
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:layout_editor_absoluteY="230dp">

            <Button
                android:id="@+id/bStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_button"
                android:enabled="false"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/start"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>