<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mailLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@android:color/white"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivMailIcon"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:clickable="false"
        android:duplicateParentState="true"
        android:padding="10dp"
        app:srcCompat="@drawable/mail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:duplicateParentState="true"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:duplicateParentState="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:text="@string/tvFrom"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tvID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:duplicateParentState="true"
                android:gravity="right"
                android:text="#121" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            android:text="@string/tvTo"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            android:text="@string/tvSubject"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:duplicateParentState="true"
            android:gravity="right"
            android:text="data"
            android:textSize="10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>