<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditMailActivity"
    tools:showIn="@layout/activity_edit_mail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DBDBDB"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_toLeftOf="@+id/ivDomain">

                <EditText
                    android:id="@+id/etDomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/labelDomain"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivDomain"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/presence_busy" />
            </RelativeLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="#DBDBDB"
                android:clickable="false"
                android:duplicateParentState="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:layout_toLeftOf="@+id/ivFrom">

                    <EditText
                        android:id="@+id/etFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/labelFrom"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivFrom"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/presence_busy" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_toLeftOf="@+id/ivTo">

                <EditText
                    android:id="@+id/etTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/labelTo"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:id="@+id/ivTo"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/presence_busy" />
        </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/labelSubject"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etBody"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/labelBody"
                    android:inputType="textMultiLine"
                    tools:layout_editor_absoluteY="181dp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>